fix animated title line jump

--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -1,23 +1,16 @@
-@keyframes transitionIn {
+@keyframes fadeIn {
     0% {
         opacity: 0;
-        transform: rotateX(-10deg);
     }
-
-    /* 50% {
-        opacity: 0;
-        transform: rotateX(-10deg);
-    } */
 
     100% {
         opacity: 1;
-        transform: rotateX(0);
     }
 
 }
 
 .home-fade {
-    animation: transitionIn 1s;
+    animation: fadeIn 2s;
 }
 
 .hero-image {
